--- a/src/app/contatos/edit/edit.component.html
+++ b/src/app/contatos/edit/edit.component.html
@@ -1,12 +1,15 @@
-<form (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="Nome">Nome:</label>
-    <input type="text" class="form-control" [(ngModel)]="contato.nome" name="Nome" id="" />
 
-  </div>
-  <div class="form-group">
-    <label for="tel">Telefone:</label>
-    <input type="text" class="form-control" [(ngModel)]="contato.telefone" name="tel" />
+<div class="col edit">
+<form (ngSubmit)="onSubmit()">
+  <div class="form-group row">
+    <div class="col">
+      <label for="Nome">Nome:</label>
+      <input type="text" class="form-control " [(ngModel)]="contato.nome" name="Nome" id="" placeholder="Insira seu Nome" />
+    </div>
+    <div class="col">
+      <label for="tel">Telefone:</label>
+      <input type="number" class="form-control" [(ngModel)]="contato.telefone" name="tel" placeholder="Insira seu telefone" />
+    </div>
   </div>
   <button type="submit" class="aparece btn btn-primary ">
     <i class="material-icons">person_add</i>
@@ -15,3 +18,4 @@
     </div>
   </button>
 </form>
+</div>
